--- a/2022/Makefile
+++ b/2022/Makefile
@@ -1,5 +1,11 @@
-runscript:
+all: runscript
+
+runscript: mapreduce/all
 	../scripts/md2html.py
 
 push:
 	../scripts/upload.sh
+
+
+mapreduce/all:
+	$(MAKE) -C mapreduce
